--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-BACK_DEVE\node_modules
+BACK_DEVE/node_modules
 /node_modules
 /.pnp
 .pnp.js
